src/less/styles.less
/* ... */
body {
  background-color: #fff;
  padding-top: 75px;
  font-size: 16px;

  // Content Background
  #main-con {
    min-height: 600px;
    margin-bottom: 30px;
    //background: url(/img/about-neuron.png) right -30px no-repeat;
    @media (max-width: @screen-md-min) {
      background: transparent;
    }
  }
}

// Anchor fix for sticky header
a[name]:before {
  display: block;
  content: " ";
  margin-top: -85px;
  height: 77px;
  visibility: hidden;
}

// Headers
h1 {
  font-weight: 400;
}
h2 {
  font-weight: 400;
}
h3 {
  font-weight: 600;
  color: @nats-colour-blue-dark;
}
h4 {
  font-weight: 600;
  color: @nats-colour-blue-dark;
}
h5 {
  font-weight: 700;
}
h6 {
  font-weight: 400;
}
.lead {
  font-size: floor((@font-size-base * 1.15));
  font-weight: 400;

  @media (min-width: @screen-sm-min) {
    font-size: floor((@font-size-base * 1.4));
  }
}
.page-header {
  border-bottom: none;
}
// Colour text
.nats-colour-blue-lite {
  color: @nats-colour-blue-lite;
}
.nats-colour-blue-dark {
  color: @nats-colour-blue-dark;
}
.nats-colour-green-lite {
  color: @nats-colour-green-lite;
}
.nats-colour-green-dark {
  color: @nats-colour-green-dark;
}

// Social Icons
.social-icon {
  display: inline-block;
  position: relative;
  top: 1px;
  width: 50px;
  height: 50px;
  margin: 0px -5px -16px -5px;
}

// Labels
.label {
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
}

#gdpr {
  font-size: 85%;
  background-color: @nats-brand-gray-light;
  color: @text-color;
  padding: 20px;
  border-top: solid black;
  opacity: 1.0;
}

#gdpr > h3 {
  font-size: 18pt;
  margin-top: 0
}

a.dynamic {
  cursor: pointer;
};

// Tables
table {
  .table();
  .table-striped();
}

// Main Content Styles

// Navbar
nav.navbar-default {
  background: @nats-brand-background url(/img/header-background.png) repeat-x top center;

  .navbar-brand {
    padding: 0px 0px 0px 0px;
    img {
      height: 100%;
    }
  }
  ul.navbar-nav {
    font-size: 18px;
    li {
      .dropdown-menu {
        font-size: 14px;
        .dropdown-header {
          font-size: 14px;
          color: @nats-brand-gray;
        }
        .divider {
          background-color: @nats-brand-gray-dark;
        }
        li {
          padding-left: 15px;
          &.dropdown-menu {
            padding-left: 20px;
          }
          &.main-header {
            padding-left: 15px;
          }
        }
      }
      a.main-item:hover, a.main-item:active, a.main-item:focus, &.active a.main-item {
        outline: 0;
        color: @nats-colour-green-lite;

      }
      // @media (min-width: @screen-md-min) {
      //   a {
      //     padding: 28px 0px 12px 0px;
      //     margin: 0px 15px 17px;
      //
      //   }

      // }
      // @media (max-width: @screen-md-min) {
      //   a:hover, a:active, a:focus, &.active a, &.active a:hover {
      //     outline: 0;
      //     background-color: lighten(@nats-brand-blue-dark, 10%);
      //   }
      //   &.active, &.open {
      //     a.main-item,
      //     a.main-item:hover {
      //       background-color: lighten(@nats-brand-blue-dark, 10%);
      //     }
      //   }
      //   &.active, &.open {
      //     ul {
      //       li.active {
      //         a.sub-item {
      //           background-color: lighten(@nats-brand-blue-dark, 10%);
      //           &:hover, &:active, &:focus {
      //             background-color: lighten(@nats-brand-blue-dark, 10%);
      //           }
      //         }
      //       }
      //     }
      //     a.sub-item {
      //       background-color: transparent;
      //       &:hover, &:active, &:focus {
      //         background-color: lighten(@nats-brand-blue-dark, 10%);
      //       }
      //     }
      //   }
      //   a.sub-item:hover {
      //     background-color: lighten(@nats-brand-blue-dark, 10%);
      //   }
      // }

    }

  }
}

// Home Page
html#home-html {
  background-color: @nats-brand-background;
}
/* ... */

